src/edu/cs/ai/log4KR/relational/probabilisticConditionalLogic/kbParser/antlr4/RCLParser.java
// Generated from RCL.g4 by ANTLR 4.1

   package edu.cs.ai.log4KR.relational.probabilisticConditionalLogic.kbParser.antlr4;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RCLParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__23=1, T__22=2, T__21=3, T__20=4, T__19=5, T__18=6, T__17=7, T__16=8, 
		T__15=9, T__14=10, T__13=11, T__12=12, T__11=13, T__10=14, T__9=15, T__8=16, 
		T__7=17, T__6=18, T__5=19, T__4=20, T__3=21, T__2=22, T__1=23, T__0=24, 
		NUMBER=25, ID=26, LINE_COMMENT=27, SKIP_LINES=28;
	public static final String[] tokenNames = {
		"<INVALID>", "']'", "')'", "'.'", "','", "'+'", "'['", "'*'", "'or'", 
		"'('", "'not'", "'<'", "'='", "'!='", "';'", "'>'", "'{'", "'and'", "'conditionals'", 
		"'signature'", "'=='", "'/'", "'}'", "'|'", "'!'", "NUMBER", "ID", "LINE_COMMENT", 
		"SKIP_LINES"
	};
	public static final int
		RULE_init = 0, RULE_signature = 1, RULE_sort = 2, RULE_predicate = 3, 
		RULE_conditionals = 4, RULE_conditionals_body = 5, RULE_knowledge_bases = 6, 
		RULE_knowledge_base = 7, RULE_knowledge_base_body = 8, RULE_conditional = 9, 
		RULE_formula = 10, RULE_orexpression = 11, RULE_andexpression = 12, RULE_notexpression = 13, 
		RULE_atom = 14, RULE_constraint = 15, RULE_constraint_orexpression = 16, 
		RULE_constraint_andexpression = 17, RULE_constraint_notexpression = 18, 
		RULE_constraint_atom = 19, RULE_knowledge_base_name = 20, RULE_sort_name = 21, 
		RULE_constant = 22, RULE_predicate_name = 23, RULE_variable_name = 24, 
		RULE_term = 25, RULE_and = 26, RULE_or = 27, RULE_not = 28, RULE_probability = 29, 
		RULE_fraction = 30, RULE_floatingpoint = 31;
	public static final String[] ruleNames = {
		"init", "signature", "sort", "predicate", "conditionals", "conditionals_body", 
		"knowledge_bases", "knowledge_base", "knowledge_base_body", "conditional", 
		"formula", "orexpression", "andexpression", "notexpression", "atom", "constraint", 
		"constraint_orexpression", "constraint_andexpression", "constraint_notexpression", 
		"constraint_atom", "knowledge_base_name", "sort_name", "constant", "predicate_name", 
		"variable_name", "term", "and", "or", "not", "probability", "fraction", 
		"floatingpoint"
	};

	@Override
	public String getGrammarFileName() { return "RCL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public RCLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InitContext extends ParserRuleContext {
		public ConditionalsContext conditionals() {
			return getRuleContext(ConditionalsContext.class,0);
		}
		public SignatureContext signature() {
			return getRuleContext(SignatureContext.class,0);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RCLVisitor ) return ((RCLVisitor<? extends T>)visitor).visitInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64); signature();
			setState(65); conditionals();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SignatureContext extends ParserRuleContext {
		public SortContext sort(int i) {
			return getRuleContext(SortContext.class,i);
		}
		public PredicateContext predicate(int i) {
			return getRuleContext(PredicateContext.class,i);
		}
		public List<PredicateContext> predicate() {
			return getRuleContexts(PredicateContext.class);
		}
		public List<SortContext> sort() {
			return getRuleContexts(SortContext.class);
		}
		public SignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signature; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RCLVisitor ) return ((RCLVisitor<? extends T>)visitor).visitSignature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SignatureContext signature() throws RecognitionException {
		SignatureContext _localctx = new SignatureContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_signature);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(67); match(19);
			setState(74);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(68); sort();
					setState(70);
					_la = _input.LA(1);
					if (_la==4) {
						{
						setState(69); match(4);
						}
					}

					}
					} 
				}
				setState(76);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(77); predicate();
				setState(79);
				_la = _input.LA(1);
				if (_la==4) {
					{
					setState(78); match(4);
					}
				}

				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SortContext extends ParserRuleContext {
		public ConstantContext constant(int i) {
			return getRuleContext(ConstantContext.class,i);
		}
		public Sort_nameContext sort_name() {
			return getRuleContext(Sort_nameContext.class,0);
		}
		public List<ConstantContext> constant() {
			return getRuleContexts(ConstantContext.class);
		}
		public SortContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sort; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RCLVisitor ) return ((RCLVisitor<? extends T>)visitor).visitSort(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SortContext sort() throws RecognitionException {
		SortContext _localctx = new SortContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sort);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86); sort_name();
			setState(87); match(12);
			setState(88); match(16);
			setState(89); constant();
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==4) {
				{
				{
				setState(90); match(4);
				setState(91); constant();
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97); match(22);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredicateContext extends ParserRuleContext {
		public PredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicate; }
	 
		public PredicateContext() { }
		public void copyFrom(PredicateContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PredicateWithoutSortsContext extends PredicateContext {
		public Predicate_nameContext predicate_name() {
			return getRuleContext(Predicate_nameContext.class,0);
		}
		public PredicateWithoutSortsContext(PredicateContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RCLVisitor ) return ((RCLVisitor<? extends T>)visitor).visitPredicateWithoutSorts(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PredicateWithSortsContext extends PredicateContext {
		public List<Sort_nameContext> sort_name() {
			return getRuleContexts(Sort_nameContext.class);
		}
		public Sort_nameContext sort_name(int i) {
			return getRuleContext(Sort_nameContext.class,i);
		}
		public Predicate_nameContext predicate_name() {
			return getRuleContext(Predicate_nameContext.class,0);
		}
		public PredicateWithSortsContext(PredicateContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RCLVisitor ) return ((RCLVisitor<? extends T>)visitor).visitPredicateWithSorts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PredicateContext predicate() throws RecognitionException {
		PredicateContext _localctx = new PredicateContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_predicate);
		int _la;
		try {
			setState(115);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new PredicateWithoutSortsContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(99); predicate_name();
				setState(100); match(9);
				setState(101); match(2);
				}
				break;

			case 2:
				_localctx = new PredicateWithSortsContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(103); predicate_name();
				setState(104); match(9);
				setState(105); sort_name();
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==4) {
					{
					{
					setState(106); match(4);
					setState(107); sort_name();
					}
					}
					setState(112);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(113); match(2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalsContext extends ParserRuleContext {
		public Conditionals_bodyContext conditionals_body() {
			return getRuleContext(Conditionals_bodyContext.class,0);
		}
		public ConditionalsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionals; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RCLVisitor ) return ((RCLVisitor<? extends T>)visitor).visitConditionals(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionalsContext conditionals() throws RecognitionException {
		ConditionalsContext _localctx = new ConditionalsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_conditionals);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); match(18);
			setState(118); conditionals_body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Conditionals_bodyContext extends ParserRuleContext {
		public Knowledge_base_bodyContext knowledge_base_body() {
			return getRuleContext(Knowledge_base_bodyContext.class,0);
		}
		public Knowledge_basesContext knowledge_bases() {
			return getRuleContext(Knowledge_basesContext.class,0);
		}
		public Conditionals_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionals_body; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RCLVisitor ) return ((RCLVisitor<? extends T>)visitor).visitConditionals_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Conditionals_bodyContext conditionals_body() throws RecognitionException {
		Conditionals_bodyContext _localctx = new Conditionals_bodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_conditionals_body);
		try {
			setState(122);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(120); knowledge_bases();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(121); knowledge_base_body();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Knowledge_basesContext extends ParserRuleContext {
		public Knowledge_baseContext knowledge_base(int i) {
			return getRuleContext(Knowledge_baseContext.class,i);
		}
		public List<Knowledge_baseContext> knowledge_base() {
			return getRuleContexts(Knowledge_baseContext.class);
		}
		public Knowledge_basesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_knowledge_bases; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RCLVisitor ) return ((RCLVisitor<? extends T>)visitor).visitKnowledge_bases(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Knowledge_basesContext knowledge_bases() throws RecognitionException {
		Knowledge_basesContext _localctx = new Knowledge_basesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_knowledge_bases);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(124); knowledge_base();
				setState(126);
				_la = _input.LA(1);
				if (_la==4) {
					{
					setState(125); match(4);
					}
				}

				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Knowledge_baseContext extends ParserRuleContext {
		public Knowledge_base_bodyContext knowledge_base_body() {
			return getRuleContext(Knowledge_base_bodyContext.class,0);
		}
		public Knowledge_base_nameContext knowledge_base_name() {
			return getRuleContext(Knowledge_base_nameContext.class,0);
		}
		public Knowledge_baseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_knowledge_base; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RCLVisitor ) return ((RCLVisitor<? extends T>)visitor).visitKnowledge_base(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Knowledge_baseContext knowledge_base() throws RecognitionException {
		Knowledge_baseContext _localctx = new Knowledge_baseContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_knowledge_base);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133); knowledge_base_name();
			setState(134); match(16);
			setState(135); knowledge_base_body();
			setState(136); match(22);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Knowledge_base_bodyContext extends ParserRuleContext {
		public ConditionalContext conditional(int i) {
			return getRuleContext(ConditionalContext.class,i);
		}
		public List<ConditionalContext> conditional() {
			return getRuleContexts(ConditionalContext.class);
		}
		public Knowledge_base_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_knowledge_base_body; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RCLVisitor ) return ((RCLVisitor<? extends T>)visitor).visitKnowledge_base_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Knowledge_base_bodyContext knowledge_base_body() throws RecognitionException {
		Knowledge_base_bodyContext _localctx = new Knowledge_base_bodyContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_knowledge_base_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==9) {
				{
				{
				setState(138); conditional();
				setState(140);
				_la = _input.LA(1);
				if (_la==4) {
					{
					setState(139); match(4);
					}
				}

				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalContext extends ParserRuleContext {
		public ConditionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditional; }
	 
		public ConditionalContext() { }
		public void copyFrom(ConditionalContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FactContext extends ConditionalContext {
		public ConstraintContext constraint() {
			return getRuleContext(ConstraintContext.class,0);
		}
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public ProbabilityContext probability() {
			return getRuleContext(ProbabilityContext.class,0);
		}
		public FactContext(ConditionalContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RCLVisitor ) return ((RCLVisitor<? extends T>)visitor).visitFact(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CondContext extends ConditionalContext {
		public ConstraintContext constraint() {
			return getRuleContext(ConstraintContext.class,0);
		}
		public List<FormulaContext> formula() {
			return getRuleContexts(FormulaContext.class);
		}
		public FormulaContext formula(int i) {
			return getRuleContext(FormulaContext.class,i);
		}
		public ProbabilityContext probability() {
			return getRuleContext(ProbabilityContext.class,0);
		}
		public CondContext(ConditionalContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RCLVisitor ) return ((RCLVisitor<? extends T>)visitor).visitCond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionalContext conditional() throws RecognitionException {
		ConditionalContext _localctx = new ConditionalContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_conditional);
		int _la;
		try {
			setState(179);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				_localctx = new FactContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(147); match(9);
				setState(148); formula();
				setState(149); match(2);
				setState(154);
				_la = _input.LA(1);
				if (_la==6) {
					{
					setState(150); match(6);
					setState(151); probability();
					setState(152); match(1);
					}
				}

				setState(160);
				_la = _input.LA(1);
				if (_la==11) {
					{
					setState(156); match(11);
					setState(157); constraint();
					setState(158); match(15);
					}
				}

				}
				break;

			case 2:
				_localctx = new CondContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(162); match(9);
				setState(163); formula();
				setState(164); match(23);
				setState(165); formula();
				setState(166); match(2);
				setState(171);
				_la = _input.LA(1);
				if (_la==6) {
					{
					setState(167); match(6);
					setState(168); probability();
					setState(169); match(1);
					}
				}

				setState(177);
				_la = _input.LA(1);
				if (_la==11) {
					{
					setState(173); match(11);
					setState(174); constraint();
					setState(175); match(15);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormulaContext extends ParserRuleContext {
		public OrexpressionContext orexpression() {
			return getRuleContext(OrexpressionContext.class,0);
		}
		public FormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RCLVisitor ) return ((RCLVisitor<? extends T>)visitor).visitFormula(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormulaContext formula() throws RecognitionException {
		FormulaContext _localctx = new FormulaContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_formula);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181); orexpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrexpressionContext extends ParserRuleContext {
		public List<AndexpressionContext> andexpression() {
			return getRuleContexts(AndexpressionContext.class);
		}
		public AndexpressionContext andexpression(int i) {
			return getRuleContext(AndexpressionContext.class,i);
		}
		public OrContext or(int i) {
			return getRuleContext(OrContext.class,i);
		}
		public List<OrContext> or() {
			return getRuleContexts(OrContext.class);
		}
		public OrexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orexpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RCLVisitor ) return ((RCLVisitor<? extends T>)visitor).visitOrexpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OrexpressionContext orexpression() throws RecognitionException {
		OrexpressionContext _localctx = new OrexpressionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_orexpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183); andexpression();
			setState(189);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 5) | (1L << 8) | (1L << 14))) != 0)) {
				{
				{
				setState(184); or();
				setState(185); andexpression();
				}
				}
				setState(191);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AndexpressionContext extends ParserRuleContext {
		public List<NotexpressionContext> notexpression() {
			return getRuleContexts(NotexpressionContext.class);
		}
		public NotexpressionContext notexpression(int i) {
			return getRuleContext(NotexpressionContext.class,i);
		}
		public AndContext and(int i) {
			return getRuleContext(AndContext.class,i);
		}
		public List<AndContext> and() {
			return getRuleContexts(AndContext.class);
		}
		public AndexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_andexpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RCLVisitor ) return ((RCLVisitor<? extends T>)visitor).visitAndexpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AndexpressionContext andexpression() throws RecognitionException {
		AndexpressionContext _localctx = new AndexpressionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_andexpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192); notexpression();
			setState(198);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 4) | (1L << 7) | (1L << 17))) != 0)) {
				{
				{
				setState(193); and();
				setState(194); notexpression();
				}
				}
				setState(200);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NotexpressionContext extends ParserRuleContext {
		public NotexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_notexpression; }
	 
		public NotexpressionContext() { }
		public void copyFrom(NotexpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NotAtomContext extends NotexpressionContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public NotContext not() {
			return getRuleContext(NotContext.class,0);
		}
		public NotAtomContext(NotexpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RCLVisitor ) return ((RCLVisitor<? extends T>)visitor).visitNotAtom(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SingleAtomContext extends NotexpressionContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public SingleAtomContext(NotexpressionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RCLVisitor ) return ((RCLVisitor<? extends T>)visitor).visitSingleAtom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NotexpressionContext notexpression() throws RecognitionException {
		NotexpressionContext _localctx = new NotexpressionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_notexpression);
		try {
			setState(205);
			switch (_input.LA(1)) {
			case 10:
			case 24:
				_localctx = new NotAtomContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(201); not();
				setState(202); atom();
				}
				break;
			case 9:
			case ID:
				_localctx = new SingleAtomContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(204); atom();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomContext extends ParserRuleContext {
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
	 
		public AtomContext() { }
		public void copyFrom(AtomContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PredicateWithoutTermsContext extends AtomContext {
		public Predicate_nameContext predicate_name() {
			return getRuleContext(Predicate_nameContext.class,0);
		}
		public PredicateWithoutTermsContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RCLVisitor ) return ((RCLVisitor<? extends T>)visitor).visitPredicateWithoutTerms(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FormulaInBracketsContext extends AtomContext {
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public FormulaInBracketsContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RCLVisitor ) return ((RCLVisitor<? extends T>)visitor).visitFormulaInBrackets(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PredicateWithTermsContext extends AtomContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public Predicate_nameContext predicate_name() {
			return getRuleContext(Predicate_nameContext.class,0);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public PredicateWithTermsContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RCLVisitor ) return ((RCLVisitor<? extends T>)visitor).visitPredicateWithTerms(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_atom);
		int _la;
		try {
			setState(224);
			switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
			case 1:
				_localctx = new PredicateWithoutTermsContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(207); predicate_name();
				}
				break;
